# parley

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Mainpage.dox  Makefile.am  Messages.sh  ParleyManual-kde-draft.docbook  ParleyManual.modifiedheadinglevels  ParleyManual.woTmarkup  ParleyManual.wt2db  ParleyManual.wt2db.modified  ParleyManualUserbase.original  README  README.develop  README.md  README.wiki2docbook  TODO  TODO-DASHBOARD  TODO-MIXEDMODE  TODO-PREGRADE  TODO-SESSIONS  TODO-scripting  bug-report  config-parley.h.cmake  fd-sik  fd-sik.excl  index.docbook  kvoctrain.kdevprj  metainfo.yaml  org.kde.parley.appdata.xml  parley.appdata.xml  snapcraft.yaml  (+3 more)
autotests/: CMakeLists.txt  allpass1test.cpp  allpass2test.cpp  parleyunittestutilities.cpp  parleyunittestutilities.h  sessionmanagerfixedtest.cpp  sessionmanagerfixedtest.h  testentrytest.cpp  testentrytest.h  translateshelltest.cpp  translateshelltest.h
doc/: CMakeLists.txt  Makefile.am  index.docbook  man-spotlight2kvtml.1.docbook
kvoctrain/: CMakeLists.txt  LineList.cpp  Makefile.am  Messages.sh  TODO.txt  header.cpp  header.h  keduvocwordtype.cpp  keduvocwordtype.h  kv_resource.h  kva_clip.cpp  kva_config.cpp  kva_header.cpp  kva_init.cpp  kva_io.cpp  kva_query.cpp  kvoctrain.cpp  kvoctrain.desktop  kvoctrain.dtd  kvoctrain.h  kvoctrain.kcfg  kvoctrain.knsrc  kvoctrain.lsm.tpl  kvoctrainrc  kvoctraintable.cpp  kvoctraintable.h  kvoctraintableitem.cpp  kvoctraintableitem.h  kvoctrainui.rc  kvoctrainview.cpp  kvoctrainview.h  kvtlanguages.cpp  kvtlanguages.h  kvtlessonmodel.cpp  kvtlessonmodel.h  kvtlessonview.cpp  kvtlessonview.h  kvtnewstuff.cpp  kvtnewstuff.h  kvtquery.cpp  (+22 more)
kvoctrain/common-dialogs/: CMakeLists.txt  CharSetDlg.cpp  CharSetDlg.dlg  CharSetDlg.h  CharSetDlg.ui  CharSetDlgData.cpp  CharSetDlgData.h  CharSetDlgForm.cpp  GroupOptPage.cpp  GroupOptPage.h  GroupOptPageData.cpp  GroupOptPageData.h  LessonInputDlg.cpp  LessonInputDlg.dlg  LessonInputDlg.h  LessonInputDlg.ui  LessonInputDlgData.cpp  LessonInputDlgData.h  LessonInputDlgForm.cpp  LessonInputDlgForm.ui  Makefile.am  NumLessonDlg.cpp  NumLessonDlg.dlg  NumLessonDlg.h  NumLessonDlgData.cpp  NumLessonDlgData.h  NumLessonDlgForm.cpp  NumLessonDlgForm.ui  ProgressDlg.cpp  ProgressDlg.dlg  ProgressDlg.h  ProgressDlg.ui  ProgressDlgData.cpp  ProgressDlgData.h  ProgressDlgForm.cpp  ProgressDlgForm.ui  aboutdialog.cpp  aboutdialog.h  blockoptions.cpp  blockoptions.h  (+33 more)
kvoctrain/docprop-dialogs/: CMakeLists.txt  DocOptionsPage.cpp  DocOptionsPage.dlg  DocOptionsPage.h  DocOptionsPageData.cpp  DocOptionsPageData.h  DocOptionsPageForm.ui  DocPropDlg.cpp  DocPropDlg.h  DocPropLangDlg.cpp  DocPropLangDlg.h  LangPropPage.cpp  LangPropPage.dlg  LangPropPage.h  LangPropPageData.cpp  LangPropPageData.h  LangPropPageForm.ui  LessOptPage.cpp  LessOptPage.dlg  LessOptPage.h  LessOptPageData.cpp  LessOptPageData.h  LessOptPageForm.ui  Makefile.am  TenseOptPage.cpp  TenseOptPage.dlg  TenseOptPage.h  TenseOptPageData.cpp  TenseOptPageData.h  TenseOptPageForm.ui  TitlePage.cpp  TitlePage.dlg  TitlePage.h  TitlePageData.cpp  TitlePageData.h  TitlePageForm.ui  TypeOptPage.cpp  TypeOptPage.dlg  TypeOptPage.h  TypeOptPageData.cpp  (+9 more)
kvoctrain/docs/: DOCUMENTARY  kvtml-aufbau.txt  kvtml-structure.txt  lex-aufbau2.txt
kvoctrain/entry-dialogs/: AdjEntryPage.cpp  AdjEntryPage.dlg  AdjEntryPage.h  AdjEntryPageData.cpp  AdjEntryPageData.h  AdjEntryPageForm.ui  AuxInfoEntryPage.cpp  AuxInfoEntryPage.dlg  AuxInfoEntryPage.h  AuxInfoEntryPageData.cpp  AuxInfoEntryPageData.h  AuxInfoEntryPageForm.ui  CMakeLists.txt  CommonEntryPage.cpp  CommonEntryPage.dlg  CommonEntryPage.h  CommonEntryPageData.cpp  CommonEntryPageData.h  CommonEntryPageForm.ui  DocOptionsPage.cpp  DocOptionsPage.h  DocOptionsPageData.cpp  DocOptionsPageData.h  EntryDlg.cpp  EntryDlg.h  EntryDlgForm.ui  FromToEntryPage.cpp  FromToEntryPage.dlg  FromToEntryPage.h  FromToEntryPageData.cpp  FromToEntryPageData.h  FromToEntryPageForm.ui  LessOptPage.cpp  LessOptPage.h  LessOptPageData.cpp  LessOptPageData.h  MCEntryPage.cpp  MCEntryPage.h  MCEntryPageForm.ui  (+30 more)
plasmoid/: CMakeLists.txt  TODO  config.ui  parley_plasma.cpp  parley_plasma.h  plasma_parley.desktop
plugins/: CMakeLists.txt  example.desktop  example.py  google_dictionary.desktop  google_dictionary.py  google_images.desktop  google_images.py  google_images.ui  leo-dict.desktop  leo-dict.py  myscript1.py  myscript2.py  myscript3.py  test.desktop  test.py  test1.desktop  test2.desktop  test3.desktop
practice/: CMakeLists.txt  TODO  answervalidator.cpp  answervalidator.h  eduwidget.h  entryfilter.cpp  entryfilter.h  hint.cpp  hint.h  input.cpp  input.h  main.cpp  parleypractice.kcfg  parleypracticemainwindow.cpp  parleypracticemainwindow.h  practiceprefs.cpp  practiceprefs.h  practiceprefs.kcfgc  practiceview.h  prompt.cpp  prompt.h  questiondisplay.cpp  questiondisplay.h  statistics.cpp  statistics.h  stdbuttons.cpp  stdbuttons.h  testentrymanager.cpp  testentrymanager.h
scripts_test/: CMakeLists.txt  google_translation.py  main.cpp  myscript.js  myscript.py  scripts.cpp  scripts.h  translationscript.cpp  translationscript.h
src/: CMakeLists.txt  Messages.sh  browserintegration.h.in  exportdialog.cpp  exportdialog.h  exportdialog.ui  hisc-app-parley-simple.svgz  hisc-app-parley.svgz  kva_init.cpp  kva_io.cpp  kvoctrain.cpp  kvoctrain.h  kvtlessonmodel.cpp  kvtlessonmodel.h  kvtlessonview.cpp  kvtlessonview.h  kvtsortfiltermodel.cpp  kvtsortfiltermodel.h  kvttabledelegate.cpp  kvttabledelegate.h  kvttablemodel.cpp  kvttablemodel.h  kvttableview.cpp  kvttableview.h  latin1_to_utf8  lessondockwidget.cpp  lessondockwidget.h  main.cpp  org.kde.parley.desktop  oxsc-app-parley.svgz  parley-themes.knsrc  parley.cpp  parley.desktop  parley.h  parley.knsrc  parley.qrc  parley.rc  parleyactions.cpp  parleyactions.h  parleydocument.cpp  (+11 more)
themes/: CMakeLists.txt  bees_theme.desktop  bees_theme.svgz  theme_reference.desktop  theme_reference.svgz
(+1279 files in other folders)
